# glaciersat

./: .coveragerc  .gitignore  .pep8speaks.yml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
ci/: requirements-py37-all-rc.yml  requirements-py37-all.yml  requirements-py37-xarray-dev.yml  requirements-py39-all-rc.yml  requirements-py39-all.yml  requirements-py39-xarray-dev.yml
docs/: api.rst  conf.py  data-sources.rst  index.rst  melt-area.rst  opt-uncertainties.rst  sar-uncertainties.rst  snowlines.rst
glaciersat/: __init__.py  cfg.py  params.cfg  utils.py
glaciersat/core/: albedo.py  gis.py  imagery.py  snowlines.py  tasks.py
glaciersat/operational/: cronjobs.py
glaciersat/tests/: __init__.py  test_albedo.py  test_utils.py
