[tool.poetry]
name = "glaciersat"
version = "0.0.1"
description = "A Python library with tools to monitor and observe glaciers from satellites."
authors = ["Johannes Landmann <j_landmann[at]gmx.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
sentinelsat = "^1.1.1"
xarray = "*"
joblib = "^1.2.0"
shapely = "*"
geopandas = "^0.12.2"
dask = "^2023.2.1"
rasterio = "^1.3.6"
matplotlib = "^3.7.0"
configobj = "^5.0.8"
salem = "^0.3.9"
scikit-image = "^0.19.3"
schedule = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.2.1"


[tool.poetry.group.docs.dependencies]
Sphinx = "^6.1.3"
pydata-sphinx-theme = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
